# agentik

./: .env.example  .gitignore  Cargo.toml  README.md
apps/phloem-server/: Cargo.toml
apps/phloem-server/src/: config.rs  error.rs  main.rs  middleware.rs  routes.rs  services.rs  sse.rs  state.rs
apps/phloem-tui/: Cargo.toml
apps/phloem-tui/src/: agent_runtime.rs  app.rs  config_db.rs  main.rs  state.rs  widgets.rs
apps/phloem-web/: README.md  package-lock.json  package.json  vite.config.ts
crates/aether-tools/: Cargo.toml
crates/aether-tools/src/: describe_table.rs  lib.rs  list_tables.rs  namespace.rs  query.rs  table.rs
crates/agentik/: Cargo.toml
crates/agentik-api/: Cargo.toml
crates/agentik-api/src/: discovery.rs  lib.rs
crates/agentik-app/: Cargo.toml
crates/agentik-app/src/: kinds.rs  main.rs
crates/agentik-control-client/: Cargo.toml
crates/agentik-control-client/src/: client.rs  discovery.rs  lib.rs
crates/agentik-control-proto/: Cargo.toml  build.rs
crates/agentik-control-proto/proto/: control.proto
crates/agentik-control-proto/src/: lib.rs
crates/agentik-core/: Cargo.toml
crates/agentik-core/src/: agent.rs  agent_builder.rs  error.rs  lib.rs  lifecycle.rs  memory.rs  message_ext.rs  process.rs  storage.rs  tools.rs  toolset.rs  types.rs
crates/agentik-core/tests/: integration_agent.rs
crates/agentik-proc/: Cargo.toml
crates/agentik-proc/src/: lib.rs
crates/agentik-runtime/: Cargo.toml
crates/agentik-runtime/src/: control.rs  http.rs  kinds.rs  lib.rs  main.rs  model_config.rs  pool.rs  process.rs  registry.rs  runtime.rs
crates/agentik-runtime/tests/: e2e.http  integration_registry.rs  integration_runtime.rs
crates/agentik-sdk/: Cargo.toml
crates/agentik-sdk/src/: streaming.rs
crates/agentik-skill-server/src/: lib.rs  sqlite_store.rs
crates/agentik-tui/src/: lib.rs  state.rs
crates/agentik-types/src/: agent_events.rs  lib.rs  tools.rs
crates/bibliography-tools/src/: detail.rs  format.rs  lib.rs  search.rs
crates/datalake-tools/: Cargo.toml
crates/datalake-tools/src/: lib.rs  namespace.rs  query.rs  table.rs
crates/eutils-rs/src/: format.rs  lib.rs
crates/file-base/: Cargo.toml
crates/opengwas-rs/: Cargo.toml
(+91 files in other folders)
