[package]
name = "agentik-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared wire types between the agentik runtime backend and frontends."

[dependencies]
agentik-types = { path = "../agentik-types" }
uuid = { version = "1.12", features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
