[package]
name = "agentik-control-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "gRPC client for the agentik control plane."

[dependencies]
agentik-api = { path = "../agentik-api" }
agentik-control-proto = { path = "../agentik-control-proto" }
tonic = "0.13"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
uuid = { version = "1.12", features = ["v4"] }
serde_json = { workspace = true }

[lints]
workspace = true
