[package]
name = "agentik-control-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "gRPC protobuf definitions for the agentik control plane."

[dependencies]
tonic = "0.13"
prost = "0.13"

[build-dependencies]
tonic-build = "0.13"

[lints]
workspace = true
