[package]
name = "datalake-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Iceberg operation primitive tools for agentik-core: namespace and table management, plus table preview."

[dependencies]
agentik-core = { path = "../agentik-core" }
agentik-proc = { path = "../agentik-proc" }
agentik-sdk = { path = "../agentik-sdk" }
datalake = { path = "../datalake" }
iceberg = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
datafusion = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
